--- a/typescript/quiz-app-prisma/genezio.yaml
+++ b/typescript/quiz-app-prisma/genezio.yaml
@@ -1,7 +1,7 @@
 # The name of the project.
 name: prisma-example
 # The region where the project is deployed.
-region: us-east-1
+region: eu-central-1
 # The version of the Genezio YAML configuration to parse.
 yamlVersion: 2
 backend:
